# avesync

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
migrations/2024-05-29-154907_create_files_and_replicas/: up.sql
src/: main.rs  schema.rs
src/models/: file.rs  mod.rs  replica.rs
